--- a/frontend/styles/shared-styles.css
+++ b/frontend/styles/shared-styles.css
@@ -10,3 +10,17 @@
   max-width: 100%;
 }
 
+.remove-padding {
+  padding: 0 !important;
+}
+
+.top-bar {
+  width: 100%;
+  height: 200px;
+  background-color: hsl(214, 90%, 52%);
+  margin: 0 0 15px 0;
+  color: white;
+  font-size: 43px;
+  padding-top: 50px;
+  padding-left: 40px;
+}
